layout issues

--- a/css/scss/partials/_base.scss
+++ b/css/scss/partials/_base.scss
@@ -9,6 +9,7 @@ body {
 	height: 100%;
 	width: 100%;
 	z-index: 0;
+	overflow: hidden;
 	// background-image: url('../../img/happy_cloud.svg');
  // 	background-size: 50%;
  //    background-position: center;
@@ -41,6 +42,10 @@ body {
 		justify-content: center;
 		align-items: center;
 		
+		@include bp(medsmall) {		
+			position: relative;
+		}
+
 		@include bp(large) {
 			width: 600px;
 			height: 600px;
@@ -49,14 +54,14 @@ body {
 	}
 
 	button {
-		display: block;
 		position: absolute;
 		align-self: center;
-		height: 15rem;
-		width: 15rem;
 		min-width: 180px;
-		margin: auto;
-		border: 1px solid $c-transparent;
+		min-height: 200px;
+		width: 100%;
+		height: 10rem;
+		margin: 0 auto;
+		border: 1px solid red;
 		background-color: $c-transparent;
 		border-radius: 50%;
 		font-family: 'Varela Round', sans-serif;
@@ -71,20 +76,21 @@ body {
 		transition: opacity 0.8s ease-out, z-index 1s ease-out ;
 
 		@include bp(small) {
-			font-size: 2rem;
-	    	width: 50%;
+			// font-size: 2rem;
+	  //   	width: 50%;
 		}
 
 		@include bp(medsmall) {
-			font-size: 3.2rem;
-    		min-width: 600px;
-    		min-height: 600px;
-    		width: 600px;
-    		top: calc(50% - 600px);
+   //  		top: calc(50% - 600px);
+   // 			margin-top: 300px;
+			// font-size: 3.2rem;
+			// position: absolute;
+   //  		width: 600px;
+   //  		height: 600px;
+   //  		width: 600px;
 		  	// -webkit-transform: translateX(-50%);
   			// -ms-transform: translateX(-50%);
   			// transform: translateX(-50%);
-   			margin-top: 300px;
 		}
 
 		@include bp(large) {
